--- a/css/menu.css
+++ b/css/menu.css
@@ -3,7 +3,7 @@
     top: 0%;
     padding: 1.5% 2%;
     background-color: var(--main-color);
-    text-align: center;
+    /* text-align: center; */
     z-index: 1;
 
     transition: ease-in-out 1ms;
@@ -21,7 +21,7 @@
     color:  var(--first-color);
     text-align: center;
     text-decoration: none;
-    padding-left: 2%;
+    padding-left: 0%;
     padding-right: 2%;
 }
 
