--- a/css/themes.css
+++ b/css/themes.css
@@ -4,7 +4,7 @@
 
     --background-color: rgb(255, 255, 255);
     --first-color: rgb(255, 255, 255);
-    --main-color: #0051ff; 
+    --main-color: #25b645; 
   
 }
 
