--- a/css/bookcard.css
+++ b/css/bookcard.css
@@ -8,7 +8,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 5%;
-    background-color: #25b645;
+    background-color: var(--main-color);
 }
 .booksection input{
     padding: 5px 25px;
