--- a/css/themes.css
+++ b/css/themes.css
@@ -2,9 +2,9 @@
     font-size: 15px;
     font-family: Roboto, sans-serif;
 
-    --background-color: rgb(255, 255, 255);
+    --background-color: rgb(2, 2, 2);
     --first-color: rgb(255, 255, 255);
-    --main-color: #25b645; 
+    --main-color: #008bad; 
   
 }
 
